# rplace

./: .gitignore
client/: Cargo.toml  config.json.example
client/src/: config.rs  main.rs  reddit_client.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  protocol.rs
server/: Cargo.toml  README.md  config.json.example
server/src/: colour_index.rs  config.rs  image.rs  main.rs  server.rs
