[package]
name = "client"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.9"