[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12.0"
axum = { version = "0.5", features = ["json"] }
image = "0.23"